diesel_compile_tests/tests/fail/ordering_functions_require_ord.stderr
error[E0277]: the trait bound `Bool: SqlOrdAggregate` is not satisfied
  --> tests/fail/ordering_functions_require_ord.rs:13:38
   |
LL |     let source = stuff::table.select(max(stuff::b));
   |                                      ^^^^^^^^^^^^^ the trait `SqlOrd` is not implemented for `diesel::sql_types::Bool`
   |
   = help: the following other types implement trait `SqlOrd`:
             Array<T>
             Citext
             Datetime
             Interval
             Nullable<T>
             diesel::sql_types::BigInt
             diesel::sql_types::Date
             diesel::sql_types::Double
           and N others
   = note: required for `diesel::sql_types::Bool` to implement `SqlOrdAggregate`
note: required by a bound in `diesel::dsl::max`
  --> DIESEL/diesel/diesel/src/expression/functions/aggregate_ordering.rs
   |
LL |     fn max<ST: SqlOrdAggregate>(expr: ST) -> ST::Ret;
   |                ^^^^^^^^^^^^^^^ required by this bound in `max`

   
error[E0277]: expressions of the type `diesel::sql_types::Bool` cannot be ordered by the database
  --> tests/fail/ordering_functions_require_ord.rs:13:31
   |
LL |     let source = stuff::table.select(max(stuff::b));
   |                               ^^^^^^ the trait `SqlOrd` is not implemented for `diesel::sql_types::Bool`
   |
   = help: the following other types implement trait `SqlOrd`:
             Array<T>
             Citext
             Datetime
             Interval
             Nullable<T>
             diesel::sql_types::BigInt
             diesel::sql_types::Date
             diesel::sql_types::Double
           and N others
   = note: required for `diesel::sql_types::Bool` to implement `SqlOrdAggregate`
   = note: required for `max<Bool, b>` to implement `diesel::Expression`
   = note: required for `stuff::table` to implement `SelectDsl<max<Bool, b>>`

   
error[E0277]: the trait bound `Bool: SqlOrdAggregate` is not satisfied
   --> tests/fail/ordering_functions_require_ord.rs:16:38
    |
 LL |     let source = stuff::table.select(min(stuff::b));
    |                                      ^^^^^^^^^^^^^ the trait `SqlOrd` is not implemented for `diesel::sql_types::Bool`
    |
    = help: the following other types implement trait `SqlOrd`:
              Array<T>
              Citext
              Datetime
              Interval
              Nullable<T>
              diesel::sql_types::BigInt
              diesel::sql_types::Date
              diesel::sql_types::Double
            and N others
    = note: required for `diesel::sql_types::Bool` to implement `SqlOrdAggregate`
note: required by a bound in `diesel::dsl::min`
   --> DIESEL/diesel/diesel/src/expression/functions/aggregate_ordering.rs
    |
LL |     fn min<ST: SqlOrdAggregate>(expr: ST) -> ST::Ret;
    |                ^^^^^^^^^^^^^^^ required by this bound in `min`
 
    
error[E0277]: expressions of the type `diesel::sql_types::Bool` cannot be ordered by the database
  --> tests/fail/ordering_functions_require_ord.rs:16:31
   |
LL |     let source = stuff::table.select(min(stuff::b));
   |                               ^^^^^^ the trait `SqlOrd` is not implemented for `diesel::sql_types::Bool`
   |
   = help: the following other types implement trait `SqlOrd`:
             Array<T>
             Citext
             Datetime
             Interval
             Nullable<T>
             diesel::sql_types::BigInt
             diesel::sql_types::Date
             diesel::sql_types::Double
           and N others
   = note: required for `diesel::sql_types::Bool` to implement `SqlOrdAggregate`
   = note: required for `min<Bool, b>` to implement `diesel::Expression`
   = note: required for `stuff::table` to implement `SelectDsl<min<Bool, b>>`

   For more information about this error, try `rustc --explain E0277`.
